--- a/about.html
+++ b/about.html
@@ -108,12 +108,22 @@
                         <div class="about__right">
                             <h5 class="content-title">Обо мне</h1>
                                 <div class="about__text text-block">
-                                    <p>
-                                        Я уверенный верстальщик и начинающий frontend-разработчик. Есть желание работать и развиваться в данном направлении. Люблю учиться и готов вкладывать в это время и силы. Умею признавать свои ошибки и стараюсь их исправить. Предпочитаю работать в команде.
-                                        Быстро учусь новому, умею учить других. Увлекаюсь футболом, рынком Forex. Также в наличии энтузиазм, интерес к сложным и нестандартным задачам, упорство. Читаю чужой код (и свой, забытый на пару лет - тоже). Знания:
-                                        + HTML5 / CSS3 / Bootstrap + JavaScript (jQuery, React.js), PHP - начальный уровень, активное и углубленное изучение + Photoshop, VSCode, Sublime Text 3 + Системы контроля версий: Git, Team Foundation Version Control
-                                        (TFVC) + Пакетные менеджеры: npm + LESS, SASS(SCSS), PUG + WebPack, Gulp + Методология БЭМ + навыки сисадмина на уровне "тыжпрограммист".
-                                    </p>
+                                    <p>Я уверенный верстальщик и начинающий frontend-разработчик. Есть желание работать и развиваться в данном направлении.</p>
+                                    <p>Люблю учиться и готов вкладывать в это время и силы. Умею признавать свои ошибки и стараюсь их исправить. Предпочитаю работать в команде.</p>
+                                    <p>Быстро учусь новому, умею учить других. Увлекаюсь футболом, рынком Forex. Также в наличии энтузиазм, интерес к сложным и нестандартным задачам, упорство. Читаю чужой код (и свой, забытый на пару лет - тоже).</p>
+
+                                    <h3>Знания:</h3>
+                                    <ul>
+                                        <li>+ HTML5 / CSS3 / Bootstrap</li>
+                                        <li>+ JavaScript (jQuery, React.js), PHP - начальный уровень, активное и углубленное изучение</li>
+                                        <li>+ Photoshop, VSCode, Sublime Text 3</li>
+                                        <li>+ Системы контроля версий: Git, Team Foundation Version Control (TFVC)</li>
+                                        <li>+ Пакетные менеджеры: npm</li>
+                                        <li>+ LESS, SASS(SCSS), PUG</li>
+                                        <li>+ WebPack, Gulp</li>
+                                        <li>+ Методология БЭМ</li>
+                                        <li>+ навыки сисадмина на уровне "тыжпрограммист".</li>
+                                    </ul>
                                 </div>
 
                                 <div class="about__download">
